html/css/style.css
@font-face {
  font-family: 'Libre Baskerville', serif;
  src: url("../fonts/icomoon/icomoon.eot?srf3rx");
  src: url("../fonts/icomoon/icomoon.eot?srf3rx#iefix") format("embedded-opentype"), url("../fonts/icomoon/icomoon.ttf?srf3rx") format("truetype"), url("../fonts/icomoon/icomoon.woff?srf3rx") format("woff"), url("../fonts/icomoon/icomoon.svg?srf3rx#icomoon") format("svg");
  font-weight: normal;
  font-style: normal;
}
/* =======================================================
*
* 	Template Style 
*	Edit this section
*
* ======================================================= */
body {
  font-family: 'Libre Baskerville', serif;
  line-height: 1.8;
  font-size: 16px;
  height: 100%;
  background: url(../images/testbackground.webp), #f4efe9; 
  background-size:     cover;                      
  background-repeat:   no-repeat;
  background-position: center top;
  color: #848484;
  font-weight: 300;
  overflow-x: hidden;
  padding: 1;

}
body.fh5co-offcanvas {
  overflow: hidden;
}

a {
  color: #2da9d7;
  -webkit-transition: 0.5s;
  -o-transition: 0.5s;
  transition: 0.5s;
}
a:hover {
  text-decoration: none !important;
  color: #2da9d7 !important;
}
a:active, a:focus {
  outline: none;
}

p, ul, ol {
  margin-bottom: 1.5em;
  font-size: 15px;
  color: #5c5c5c;
  font-family: 'Libre Baskerville', serif;
}

h1, h2, h3, h4, h5, h6 {
  color: #212121;
  font-family: 'Libre Baskerville', serif;
  font-weight: 400;
  margin: 0 0 0 0;
}

figure {
  margin-bottom: 2em;
}

::-webkit-selection {
  color: #fcfcfc;
  background: #2da9d7;
}

::-moz-selection {
  color: #fcfcfc;
  background: #2da9d7;
}

::selection {
  color: #fcfcfc;
  background: #2da9d7;
}

#fh5co-header {
  padding-top: 0px;
  position: abosolute;
  margin-bottom: 30px;
}
#fh5co-header #fh5co-logo img {
  max-width: 50%;
  pointer-events: none;
}
#fh5co-header nav {
  padding-top: 20px;
}
#fh5co-header nav ul {
  padding: 0;
  margin: 0;
}
#fh5co-header nav ul li {
  margin: 0;
  display: -moz-inline-stack;
  display: inline-block;
  zoom: 1;
  display: inline;
  text-shadow: 1px 1px 2px white;
  list-style: none;
  font-size: 15px;
  top: 50%;
  padding: 10px;
}
#fh5co-header nav ul li a {
  color: #5c5c5c !important;
  padding: 10px;
}
@media screen and (max-width: 480px) {
  #fh5co-header nav ul li a {
    padding: 5px;
  }
}
#fh5co-header nav ul li a:hover, #fh5co-header nav ul li a:active, #fh5co-header nav ul li a:focus {
  color: #000 !important;
  text-decoration: none;
  outline: none;
}
#fh5co-header nav ul li.active a {
  text-decoration: line-through !important;
  color: black !important;
}

.fh5co-projects-feed, .footer-content {
  margin: 0 auto;
  max-width: 1400px;
}

.fh5co-projects-feed .fh5co-project {
  float: left;
  margin: 20px 20px 20px;
  width: 290px;
}
@media screen and (max-width: 480px) {
  .fh5co-projects-feed .fh5co-project {
    margin: 10px 10px 10px;
  }
}
.fh5co-projects-feed .fh5co-project > a {
  display: block;
  text-align: center;
}
.fh5co-projects-feed .fh5co-project > a img {
  margin-bottom: 30px;
}
.fh5co-projects-feed .fh5co-project > a h2 {
  font-size: 14px;
  color: #999999;
  -webkit-transition: 0.3s;
  -o-transition: 0.3s;
  transition: 0.3s;
}
.fh5co-projects-feed .fh5co-project > a:hover h2, .fh5co-projects-feed .fh5co-project > a:active h2, .fh5co-projects-feed .fh5co-project > a:focus h2 {
  color: #000;
}

.masonry,
.masonry .masonry-brick {
  -webkit-transition-duration: 0.7s;
  transition-duration: 0.7s;
}

.masonry {
  -webkit-transition-property: height, width;
  transition-property: height, width;
}

.masonry .masonry-brick {
  -webkit-transition-property: left, right, top;
  transition-property: left, right, top;
}

.page-content {
  margin: 0 auto;
  max-width: auto;
  width: 95%;
  padding-top: 70px;
  padding-bottom: 70px;
}
.page-content img {
  max-width: 95%;
}
@media screen and (max-width: 768px) {
  .page-content {
    padding-left: 15px;
    padding-right: 15px;
  }
  #fh5co-header #fh5co-logo img {
    max-width: 75%;
    pointer-events: none;
  }
}
.page-content .mb0 {
  margin-bottom: 0;
}
.page-content .meta {
  margin-bottom: 20px;
}
.page-content .meta span {
  color: #5c5c5c;
}
.page-content .meta a {
  color: #5c5c5c;
}
.page-content .meta a:hover, .page-content .meta a:active, .page-content .meta a:focus {
  color: #000 !important;Checkout
}
@media screen and (max-width: 480px) {
  .page-content {
    padding-top: 30px;
    padding-bottom: 30px;
  }
}

#fh5co-footer {
  float: left;
  width: 100%;
  padding-top: 0px;
  padding-bottom: 20px;
  text-align: center;
  color: black;
  position: absolute;
  left: 0;
  bottom: 0;
}
#fh5co-footer a {
  color: #5c5c5c;
}
#fh5co-footer a:hover, #fh5co-footer a:active, #fh5co-footer a:focus {
  color: #000 !important;
}
#fh5co-footer .social {
  margin-top: 20px;
}
#fh5co-footer .social a {
  padding: 10px;
  color: black !important;
}
@media screen and (max-width: 480px) {
  #fh5co-footer .social a {
    padding: 5px;
  }
}
#fh5co-footer .social a:hover, #fh5co-footer .social a:active, #fh5co-footer .social a:focus {
  color: #000 !important;
}

.square {
  list-style: square;
}

.pt70 {
  padding-top: 70px;
}
@media screen and (max-width: 480px) {
  .pt70 {
    padding-top: 30px;
  }
}

.pb70 {
  padding-bottom: 70px;
}
@media screen and (max-width: 480px) {
  .pb70 {
    padding-bottom: 30px;
  }
}

/*# sourceMappingURL=style.css.map */



curator-feed-default-feed-layout {
  margin-right: 100px;
  margin-left: 100px;
}


@media (max-width:1019px) {
body {
  font-family: 'Libre Baskerville', serif;
  line-height: 1.8;
  font-size: 16px;
  height: 100%;
  background: url(../images/background.webp), #f4efe9; 
  background-size:     cover;                      
  background-repeat:   repeat;
  background-position: center top;
  color: #848484;
  font-weight: 300;
  overflow-x: hidden;
  padding: 1;
}
img {
  max-width: 50%;
  
    }
	img#special {
		display: none;
	}
}
@media (min-width:1020px) {
body {
  font-family: 'Libre Baskerville', serif;
  line-height: 1.8;
  font-size: 16px;
  height: 100%;
  background: url(../images/testbackground.webp), #f4efe9; 
  background-size:     cover;                      
  background-repeat:   no-repeat;
  background-position: center top;
  color: #848484;
  font-weight: 300;
  overflow-x: hidden;
  padding: 1;

}
	img#special2 {
		display: none;
	}
img {
  max-width: 35%;
  
    }
}

